<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|clip_horizontal"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|clip_horizontal"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">


            <TextView
                android:id="@+id/tv_request_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/retrieve_user_name"
                android:textColor="@color/textColor"
                android:textSize="@dimen/login_button_text" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="pinRequestOptionClickEvent"
                    android:text="@string/sms" />

                <RadioButton
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pinRequestOptionClickEvent"
                    android:text="@string/email" />
            </RadioGroup>

            <!-- Mobile Number -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_user"
                    android:inputType="number"
                    android:maxLength="10">

                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_user"
                    android:inputType="textEmailAddress"></EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_request_bin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:layout_marginBottom="@dimen/login_button_margin_bottom"
                android:background="@color/buttonColor"
                android:padding="12dp"
                android:text="@string/request_pin"
                android:textColor="@color/appTextColor" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
