<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|clip_horizontal"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|clip_horizontal"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_text"
                android:gravity="center"
                android:text="@string/pin_request"
                android:textSize="@dimen/button_text" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin_number"
                    android:inputType="number"
                    android:maxLength="6">

                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:layout_marginBottom="@dimen/login_button_margin_bottom"
                android:background="@color/buttonColor"
                android:padding="12dp"
                android:text="@string/next"
                android:textColor="@color/appTextColor" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>